# virtualization-mcp

./: .assess-fix-timestamp  .cursorrules  .dockerignore  .env.example  .gitignore  .gitmodules  .markdownlint.json  .mcpbignore  .pre-commit-config.yaml  .semgrep.yml  AGENTS.md  ASSESSMENT.md  ASSESSMENT_AND_IMPROVEMENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  CLAUDE_INTEGRATION.md  COMPREHENSIVE_FIX_PROGRESS.md  COMPREHENSIVE_RUFF_PYTEST_REPORT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EMERGENCY_STATUS.md  FINAL_DOCSTRING_REPORT.md  FINAL_GOLD_PUSH_STATUS.md  FINAL_SESSION_SUMMARY.md  FIXING_PLAN_PRESERVE_ALL.md  FIX_PLAN.md  GLAMA_PROGRESS_SUMMARY.md  GOLD_STANDARD_REALISTIC_STATUS.md  HONEST_PROGRESS_REPORT.md  INSTALL.md  LICENSE  MANIFEST.in  MINIMAL_README.md  OVERNIGHT_GOLD_PUSH_STATUS.md  PRD.md  README.md  RELEASE_CHECKLIST.md  SANDBOX_FOLDER_MAPPING_FIX.md  (+59 more)
.cursor/rules/: architect.mdc  implementation-honesty.mdc
.github/: CODEOWNERS  dependabot.yml  dependabot.yml.disabled  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: beta-feedback.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: beta-testing.yml  beta-testing.yml.disabled  build-mcpb.yml  build-mcpb.yml.disabled  ci-cd-enhanced.yml  ci-cd.yml  ci-cd.yml.disabled  ci.yml  code-quality.yml  code-quality.yml.disabled  codeql.yml.disabled  coverage-report.yml  coverage-report.yml.disabled  dependency-updates.yml  glama-integration.yml  industrial-launch.yml  release.yml  release.yml.disabled  security-scan.yml  security-scan.yml.disabled  security.yml  semgrep.yml.disabled  test.yml  version-bump.yml  version-bump.yml.disabled
.snapshots/: config.json  readme.md  sponsors.md
.windsurf/: google-drive-docs
assets/: README.md
assets/sandbox/: Consumer.wsb  DevInfra.wsb  README.md  Run-Consumer.cmd  Run-DevInfra.cmd  Run-DevSetup.cmd  Setup-ConsumerSandbox.ps1  Setup-DevInfraSandbox.ps1  Show-ConsumerLog.ps1  Show-DevInfraLog.ps1  hello.wsb
assets/unattended/: win11-automated-autounattend.xml
assets/vbox/: README.md
config/: iso_categories.json  settings.yaml  vm_templates.yaml
docs/: API_REFERENCE.md  BOOTABLE_MEDIA_SPEC.md  CONFIGURATION.md  Configuration.md  DEVELOPMENT.md  DEVELOPMENT_GUIDE.md  DOCSTRING_COVERAGE.md  FASTMCP_2.12_COMPLIANCE.md  FEATURE_ROADMAP.md  FULL_STACK_ARCHITECTURE.md  GLAMA_AI_PLATFORM.md  GLAMA_AI_RESCAN_GUIDE.md  GOLD_STATUS_ACHIEVEMENT.md  Home.md  Installation.md  MCPB_BUILDING_GUIDE.md  MCP_PRODUCTION_CHECKLIST.md  MINIMAL_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  PHASE3_IMPLEMENTATION.md  PRD_v1.0.0.md  QUICK_START.md  Quick-Start.md  REACT_UI_PLAN.md  README.md  TOOL_DOCSTRING_STANDARD.md  TROUBLESHOOTING.md  Troubleshooting.md  USER_GUIDE.md  VBOXMCP_CORRECTED_ASSESSMENT_2025-09-01.md  VBOX_BINDINGS_STATUS.md  VICTORY.md  VM_TEMPLATE_LIBRARY.md  agentic-control.md  architecture.md  fastmcp_inspector.md  github-ci-cd-production-guide.md  hyper-v.md  hyperv-integration-plan.md  index.md  (+8 more)
docs-private/: CLEANUP_SUMMARY.md  IMPORT_ERROR_FIX.md  PROJECT_STATUS_FINAL.md  README.md
docs/advanced/: performance_tuning.md  security.md
docs/api/: API_REFERENCE.md  TOOLS_REFERENCE.md  openapi.md  overview.md  reference.md
docs/archive/: COMPLETE_ENHANCEMENT_SUMMARY.md  COMPREHENSIVE_FINAL_STATUS.md  CONTINUOUS_PROGRESS.md  CURRENT_STATUS.md  DOCSTRING_ENHANCEMENT_GUIDE.md  DOCSTRING_IMPROVEMENTS_SUMMARY.md  DOCSTRING_IMPROVEMENT_STATUS.md  DOCSTRING_PROGRESS_REPORT.md  FIX_STATUS_FINAL.md  IMPLEMENTATION_COMPLETE.md  PRD.md  PROGRESS_CHECKPOINT.md  RELEASE_CHECKLIST.md  RUFF_PYTEST_VERIFICATION.md  SANDBOX_FIX_SUMMARY.md  SESSION_1_SUMMARY.md  STATUS.md  VBOX_BINDINGS_STATUS.md  VICTORY.md
docs/concepts/: network_configuration.md  snapshot_management.md  storage_management.md  vm_management.md
docs/glama/: README.md  (+7 more)
dxt/: manifest.json  requirements.txt
examples/: sandbox_folder_mapping_example.py
hooks/: runtime-opentelemetry.py
junit/: test-results.xml
mcpb/: README.md  manifest.json  mcpb_manifest.json  prompts.json  usage_examples.json
native/: .gitignore  Cargo.toml  build.ps1  tauri.conf.json
prompts/: vboxmcp_prompt.md  virtualization_mcp_prompt.md
scripts/: FleetStartMode.ps1  Launch-ConsumerSandbox.ps1  Launch-DevInfraSandbox.ps1  backup-repo.ps1  build-mcpb-package.ps1  check-repo-standards.ps1  check-unicode-safe.ps1  check_implementation_honesty.py  copy_icon.ps1  cua-nsis-config.json  cua-smoke.py  enhance_docstrings.py  generate_coverage_tests.py  install-mcp-clients.ps1  list_api_endpoints.py  list_available_tools.py  list_mcp_tools.py  list_vboxmcp_tools.py  list_virtualization-mcp_tools.py  list_vms.py  query_mcp_tools.py  run_gold_standard_tests.py  simple_test_runner.py  sync-sota.ps1  write_icon.ps1
src/: lib.rs
temp_build/: README.md  dxt_manifest.json  pyproject.toml
temp_build/src/virtualization_mcp/: __init__.py  server.py
tests/: __init__.py  conftest.py  test_all_vm_tools.py  test_api_endpoints.py  test_auto_generated.py  test_compat_adapter.py  test_comprehensive_coverage.py  test_coverage_boost_exceptions.py  test_coverage_boost_json_monitoring.py  test_coverage_boost_network_storage.py  test_coverage_boost_utils.py  test_coverage_boost_zero_percent.py  test_deep_execution.py  test_devices.py  test_execution_coverage.py  test_final_50_percent_push.py  test_function_execution_mega.py  test_gold_mega_boost_1.py  test_gold_push_part1.py  test_gold_push_part2.py  test_gold_push_part3_server_v2.py  test_gold_push_part4_main_modules.py  test_gold_push_part5_execution.py  test_gold_standard_coverage.py  test_imports.py  test_intensive_coverage.py  test_lifecycle.py  test_main_entry_points.py  test_massive_coverage_boost.py  test_metrics.py  test_minimal_server.py.disabled  test_networking.py  test_portmanteau_network_management.py  test_portmanteau_vm_management.py  test_quick_coverage_boost.py  test_real_vbox_integration.py  test_register_tools_complete.py  test_sandbox_folder_mapping.py  test_server.py  test_storage.py  (+10 more)
webapp/: __init__.py  start.ps1  stop.ps1
(+818 files in other folders)
