[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virtualization-mcp"
version = "0.1.0"
description = "MCP server for managing VirtualBox virtual machines"
authors = [
    {name = "Sandra", email = "your.email@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=2.10.1",
    "python-dotenv>=0.19.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.900",
    "pylint>=2.0"
]

[project.scripts]
vbox-mcp = "virtualization-mcp.server:main"

[project.urls]
Homepage = "https://github.com/sandraschi/virtualization-mcp"
Documentation = "https://github.com/sandraschi/virtualization-mcp#readme"
Issues = "https://github.com/sandraschi/virtualization-mcp/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["virtualization-mcp*"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100


